remove docs link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body style="width:100%; height:100%; margin:0;">
 <!--     <embed src="https://github.com/tristabug/resume/blob/396c01aa8c175a741c5454c40b7524d710ee519b/ClarkSResume_ContactInfoFree.pdf" style="width:100%; height:100%;" /> -->
-    <iframe src="https://docs.google.com/gview?url= https://github.com/tristabug/resume/blob/396c01aa8c175a741c5454c40b7524d710ee519b/ClarkSResume_ContactInfoFree.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://github.com/tristabug/resume/blob/396c01aa8c175a741c5454c40b7524d710ee519b/ClarkSResume_ContactInfoFree.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
