--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>Sara Clark</title>
   </head>
-  <body style="width:100%; height:100%; margin:0;">
-<!--     <embed src="https://github.com/tristabug/resume/blob/396c01aa8c175a741c5454c40b7524d710ee519b/ClarkSResume_ContactInfoFree.pdf" style="width:100%; height:100%;" /> -->
-    <iframe src="https://github.com/tristabug/resume/blob/396c01aa8c175a741c5454c40b7524d710ee519b/ClarkSResume_ContactInfoFree.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+  <body>
+    <div style="width:100%; height:100%; margin:0;">
+      <iframe src="https://github.com/tristabug/resume/blob/396c01aa8c175a741c5454c40b7524d710ee519b/ClarkSResume_ContactInfoFree.pdf" style="width:100%; height:100%; border:none;"></iframe>
+    </div>
   </body>
 </html>
+  <!--     <embed src="https://github.com/tristabug/resume/blob/396c01aa8c175a741c5454c40b7524d710ee519b/ClarkSResume_ContactInfoFree.pdf" style="width:100%; height:100%;" /> -->
