--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   </head>
   <body>
     <div style="width:100%; height:100%; margin:0;">
-      <iframe src="https://github.com/tristabug/resume/main/ClarkSResume_ContactInfoFree.pdf" style="width:100%; height:100%; border:none;"></iframe>
+<!--       <iframe src="https://github.com/tristabug/resume/raw/main/ClarkSResume_ContactInfoFree.pdf" style="width:100%; height:100%; border:none;"></iframe> -->
+      <iframe src="https://docs.google.com/gview?url=https://github.com/tristabug/resume/raw/main/ClarkSResume_ContactInfoFree.pdf&embedded=true" style="width:100%; height:100%; border:none;"></iframe>
     </div>
   </body>
 </html>
-  <!--     <embed src="https://github.com/tristabug/resume/blob/396c01aa8c175a741c5454c40b7524d710ee519b/ClarkSResume_ContactInfoFree.pdf" style="width:100%; height:100%;" /> -->
-<!-- ClarkSResume_ContactInfoFree.pdf -->
