--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="en" style="width:100%; height:100%;">
+<html lang="en">
   <head>
+    <link rel="stylesheet" href="main.css">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>Sara Clark</title>
   </head>
   <body>
-    <div style="width:100%; height:100%; margin:0;">
-<!--       <iframe src="https://github.com/tristabug/resume/raw/main/ClarkSResume_ContactInfoFree.pdf" style="width:100%; height:100%; border:none;"></iframe> -->
-      <iframe src="https://docs.google.com/gview?url=https://github.com/tristabug/resume/blob/main/ClarkSResume_ContactInfoFree.pdf&embedded=true" style="width:100%; height:100%; border:none;"></iframe>
+    <div id="embeddedPDF">
+      <script src="https://unpkg.com/pdfobject@2.3.0/pdfobject.min.js"></script>
+      <script src="index.js"></script>
     </div>
   </body>
 </html>
